# packycc

./: .gitignore  Cargo.toml  JWT_CONFIG.md  RANKING_FEATURE.md  README.md  README.zh.md  config.example.toml  config.toml  install.bat
scripts/: build_and_replace.ps1
src/: cli.rs  main.rs
src/config/: defaults.rs  loader.rs  types.rs
src/core/: statusline.rs
src/core/segments/: directory.rs  emoji.rs  git.rs  mod.rs  model.rs  network.rs  quota.rs  ranking.rs  spinner.rs  time.rs  usage.rs
